<resources>
    <string name="app_name">iTunesAlbums</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play">Play</string>
    <string name="add">Add</string>
    <string name="shuffle">Shuffle</string>
    <string name="baby_pluto">Baby pluto</string>
    <string name="delete_all_albums">Delete all albums</string>
    <string name="delete_all_songs">Delete all current songs</string>
    <string name="delete_songs_from_db">Delete songs from db</string>
    <string name="search">Search</string>
    <string name="sort">Sort alphabetically</string>
    <string name="search_albums">Search albums</string>
    <string name="empty_list">Empty list</string>
    <string name="refresh_albums">RefreshAlbums</string>
    <string name="loading">Loading</string>
    <string name="possible_songs">Possible songs</string>
    <string name="network_error">Network error</string>
    <string name="albums">Albums</string>
    <string name="delete_all_albums_from_db">Delete all albums from db</string>
    <string name="sort_albums_by_name">Albums sorted by album name</string>
    <string name="delete_all_songs_from_db">All songs successfully deleted from db</string>
</resources>
