<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_album"
        android:title="@string/search"
        android:icon="@drawable/baseline_search_black_18dp"
        app:showAsAction="always"/>

    <item
        android:id="@+id/sort_alphabetically"
        android:title="@string/sort"
        android:icon="@drawable/baseline_sort_black_18dp"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/delete_all_albums"
        android:title="@string/delete_all_albums"
        app:showAsAction="never"/>

    <item
        android:id="@+id/delete_all_songs"
        android:title="@string/delete_all_songs"
        app:showAsAction="never"/>

</menu>