<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/full_album_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="128dp"
                        android:layout_height="128dp"
                        android:src="@drawable/album_artplay_example"/>

                    <TextView
                        android:id="@+id/full_album_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center"
                        android:textColor="@color/colorTextDark"
                        android:text="Friends"/>


                    <TextView
                        android:id="@+id/full_group_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Kis kis"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/album_genre"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Рок"/>

                        <TextView
                            android:id="@+id/album_year"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="2020"/>

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/play"
                    android:layout_weight="1"
                    app:icon="@drawable/play_24px"
                    app:iconTint="@android:color/white"
                    android:textColor="@android:color/white"
                    app:backgroundTint="@color/colorAccent"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"/>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/add"
                    android:layout_weight="1"
                    app:iconTint="@android:color/white"
                    app:icon="@drawable/plus_math_26px"
                    android:textColor="@android:color/white"
                    app:backgroundTint="@color/colorAccent"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"/>

            </LinearLayout>


            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shuffle"
                android:layout_gravity="start"
                android:textAlignment="viewStart"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:iconSize="20dp"
                app:icon="@drawable/shuffle_26px"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                tools:listitem="@layout/cell_single_track"/>

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
